--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,24 @@
+#input{
+    position: relative;
+    background-color: rgb(241, 241, 212);
+    top : 10px;
+    left : 10px;
+    margin: 2em auto;
+    width : 580px;
+    height : 75px;
+    padding : 10px;
+    text-align: center;
+    border : 2px solid #daa520;
+}
+#button{
+    background-color: goldenrod;
+    color :rgb(88, 6, 34);
+    font-style:normal;
+    font-size:medium;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 6px;
+}   
+
 #area {
     position: relative;
     background-color: burlywood;
@@ -6,5 +27,5 @@
     margin: 2em auto;
     width : 600px;
     height : 400px;
-
+    border : 2px solid #daa520;
 }
