--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,36 @@
 #input{
     position: relative;
     background-color: rgb(241, 241, 212);
-    top : 10px;
-    left : 10px;
+    top: 10px;
+    left: 10px;
     margin: 2em auto;
-    width : 580px;
-    height : 75px;
-    padding : 10px;
+    width: 580px;
+    height: 75px;
+    padding: 10px;
     text-align: center;
-    border : 2px solid #daa520;
+    border: 2px solid #daa520;
+    color: rgb(88, 6, 34);
+    font-weight: bolder;
 }
 #button{
     background-color: goldenrod;
-    color :rgb(88, 6, 34);
-    font-style:normal;
-    font-size:medium;
+    color: rgb(88, 6, 34);
+    font-weight: normal;
+    font-style: normal;
+    font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
     padding: 6px;
+    border-radius: 4px;
+    border-color: rgb(88, 6, 34);
 }   
 
 #area {
     position: relative;
     background-color: burlywood;
-    top : 10px;
-    left : 10px;
+    top: 10px;
+    left: 10px;
     margin: 2em auto;
-    width : 600px;
-    height : 400px;
-    border : 2px solid #daa520;
+    width: 600px;
+    height: 400px;
+    border: 2px solid #daa520;
 }
